16-Kubernetes-Networking/03-Ingress-Rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata: 
  name: allow-frontend-to-backend 
spec:
  podSelector: 
    matchLables: 
      app: backend 
  policyTypes: 
  - Ingress 
  ingress: 
  - from: 
    - podSelector: 
        matchLabels: 
          app: frontend 
    ports:
      - protocol: TCP 
        port: 8080
